--- a/v1.0/web/index.html
+++ b/v1.0/web/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>project</title>
+    <!-- <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
+    <script type="text/javascript">
+        var wd = document.documentElement.clientWidth*window.devicePixelRatio/10;
+        document.getElementsByTagName("html")[0].style.fontSize = wd + "px";
+    </script> -->
   </head>
   <body>
     <div id="app">
