--- a/v1.0/web/index.html
+++ b/v1.0/web/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>project</title>
+    <link rel="stylesheet" type="text/css" href="src/assets/bootstrap-3.3.7/css/bootstrap.css" />
+    <script type="text/javascript" src="src/assets/jquery-3.2.1.js"></script>
+    <script type="text/javascript" src="src/assets/bootstrap-3.3.7/js/bootstrap.js"></script>
     <!-- <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
     <script type="text/javascript">
         var wd = document.documentElement.clientWidth*window.devicePixelRatio/10;
