--- a/v1.0/web/index.html
+++ b/v1.0/web/index.html
@@ -9,6 +9,10 @@
         document.getElementsByTagName("html")[0].style.fontSize = wd + "px";
     </script> -->
     <link rel="stylesheet" href="./src/lib/bootstrap-3.3.7/css/bootstrap.min.css">
+    
+    <link rel="stylesheet" href="./src/assets/base.css">
+
+
   </head>
   <body>
     <div id="app">
